--- a/HulluKyla/Pages/RaportointiPage.xaml
+++ b/HulluKyla/Pages/RaportointiPage.xaml
@@ -9,7 +9,6 @@
           RowDefinitions="*,Auto"
           ColumnDefinitions="*,*">
         <Frame BorderColor="Gray" 
-               BackgroundColor="#1e1e1e"
                CornerRadius="10"
                Padding="20"
                HorizontalOptions="Fill"
@@ -26,7 +25,7 @@
                 <BoxView HeightRequest="2" Color="Gray" />
 
                 <!-- Aluevalinta -->
-                <Frame BackgroundColor="#2e2e2e" Padding="10" CornerRadius="10">
+                <Frame  Padding="10" CornerRadius="10">
                     <VerticalStackLayout>
                         <Label Text="Valitse alue" FontAttributes="Bold" FontSize="16"/>
                         <Picker x:Name="AluePicker" ItemDisplayBinding="{Binding Nimi}" />
@@ -34,7 +33,7 @@
                 </Frame>
 
                 <!-- Aikavälin valinta -->
-                <Frame BackgroundColor="#2e2e2e" Padding="10" CornerRadius="10">
+                <Frame  Padding="10" CornerRadius="10">
                     <VerticalStackLayout>
                         <Label Text="Valitse aikaväli (mökki- ja palvelutuotot)" FontAttributes="Bold" FontSize="16"/>
                         <HorizontalStackLayout Spacing="10">
@@ -52,7 +51,7 @@
                                HorizontalOptions="Center" />
 
                 <!-- Tulokset -->
-                <Frame BackgroundColor="#2e2e2e" Padding="10" CornerRadius="10">
+                <Frame  Padding="10" CornerRadius="10">
                     <VerticalStackLayout Spacing="5">
                         <Label x:Name="MokkienTuottoLabel"
                        Text="Mökkien tuotto: "
@@ -79,7 +78,6 @@
 
         <Frame  Grid.Column="1" Grid.Row="0"
                 BorderColor="Gray" 
-                BackgroundColor="#1e1e1e"
                 CornerRadius="10"
                 Padding="20"
                 HorizontalOptions="Fill"
@@ -96,7 +94,7 @@
                 <BoxView HeightRequest="2" Color="Gray" />
 
                 <!-- Vuoden valinta -->
-                <Frame BackgroundColor="#2e2e2e" Padding="10" CornerRadius="10">
+                <Frame  Padding="10" CornerRadius="10">
                     <VerticalStackLayout>
                         <Label Text="Valitse vuosi" FontAttributes="Bold" FontSize="16"/>
                         <Picker x:Name="VuosiPicker" SelectedIndexChanged="VuosiSelected" />
@@ -104,7 +102,7 @@
                 </Frame>
 
                 <!-- Kuukausittaiset tuotot -->
-                <Frame BackgroundColor="#2e2e2e" Padding="10" CornerRadius="10">
+                <Frame  Padding="10" CornerRadius="10">
                     <VerticalStackLayout>
                         <Label Text="Kuukausittaiset tuotot" FontAttributes="Bold" FontSize="16"/>
                         <CollectionView x:Name="TuottoLista"
