--- a/HulluKyla/Pages/HallintaPage.xaml
+++ b/HulluKyla/Pages/HallintaPage.xaml
@@ -11,33 +11,34 @@
 
         <!-- Napit -->
         <VerticalStackLayout Grid.Row="0" Grid.ColumnSpan="2"
-                             Spacing="15"
+                             Spacing="20"
                              VerticalOptions="Center"
-                             HorizontalOptions="Center">
+                             HorizontalOptions="Center"
+                             HeightRequest="300">
 
             <controls:ThreeDButton 
                     Text="AsiakasLista"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="AsiakasListaPage"
-                    WidthRequest="200"/>
+                    WidthRequest="190"/>
 
             <controls:ThreeDButton 
                     Text="AlueLista"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="AlueListaPage"
-                    WidthRequest="200"/>
+                    WidthRequest="190"/>
 
             <controls:ThreeDButton 
                     Text="MokkiLista"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="MokkiListaPage"
-                    WidthRequest="200"/>
+                    WidthRequest="190"/>
 
             <controls:ThreeDButton 
                     Text="PalveluLista"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="PalveluListaPage"
-                    WidthRequest="200"/>
+                    WidthRequest="190"/>
 
         </VerticalStackLayout>
 
