--- a/HulluKyla/Pages/AsiakasListaPage.xaml
+++ b/HulluKyla/Pages/AsiakasListaPage.xaml
@@ -10,20 +10,23 @@
           ColumnDefinitions="*,*">
 
         <!-- Asiakaslista -->
-        <CollectionView x:Name="AsiakasLista"
-                        Grid.Row="1" Grid.Column="0"
+        <Frame BorderColor="Gray" BackgroundColor="Transparent" Grid.Row="1" Grid.Column="0">
+            <CollectionView x:Name="AsiakasLista"
                         SelectionMode="Single"
                         SelectionChanged="AsiakasSelected">
-            <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <VerticalStackLayout Spacing="2">
-                        <Label Text="{Binding Etunimi}" FontAttributes="Bold" FontSize="14" />
-                        <Label Text="{Binding Sukunimi}" FontSize="14" />
-                        <Label Text="{Binding Email}" FontSize="12" />
-                    </VerticalStackLayout>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                            <Frame BackgroundColor="Transparent">
+                                <VerticalStackLayout Spacing="2">
+                                <Label Text="{Binding Etunimi}" FontAttributes="Bold" FontSize="14" />
+                                <Label Text="{Binding Sukunimi}" FontSize="14" />
+                                <Label Text="{Binding Email}" FontSize="12" />
+                                </VerticalStackLayout>
+                            </Frame>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </Frame>
 
         <!-- Asiakastietojen muokkaus -->
         <VerticalStackLayout Grid.Row="1" Grid.Column="1"
