--- a/HulluKyla/Pages/MokkiListaPage.xaml
+++ b/HulluKyla/Pages/MokkiListaPage.xaml
@@ -18,25 +18,28 @@
                 HeightRequest="70"/>
 
         <!-- Mökkilista -->
-        <Grid Grid.Row="1" Grid.Column="0" >
-            <CollectionView x:Name="MokkiLista"
-                            Grid.Row="1"
+            <Grid Grid.Row="1" Grid.Column="0" >
+                <Frame BorderColor="Gray" BackgroundColor="Transparent" Grid.Row="1">
+                    <CollectionView x:Name="MokkiLista"
                             SelectionMode="Single" 
                             SelectionChanged="MokkiSelected"
                             VerticalOptions="Center"
                             HorizontalOptions="Fill" >
-                <CollectionView.ItemTemplate>
-                    <DataTemplate>
-                        <VerticalStackLayout Spacing="0">
-                            <Label Text="{Binding MokkiNimi}" FontAttributes="Bold" HeightRequest="30"/>
-                            <Label Text="{Binding Katuosoite, StringFormat='Osoite: {0}'}"/>
-                            <Label Text="{Binding Postinro, StringFormat='Postinumero: {0}'}"/>
-                            <Label Text="{Binding HenkiloMaara, StringFormat='Henkilömäärä: {0}'}" HeightRequest="70"/>
-                        </VerticalStackLayout>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
-        </Grid>
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <Frame BackgroundColor="Transparent">
+                                    <VerticalStackLayout Spacing="0">
+                                        <Label Text="{Binding MokkiNimi}" FontAttributes="Bold"/>
+                                        <Label Text="{Binding Katuosoite, StringFormat='Osoite: {0}'}"/>
+                                        <Label Text="{Binding Postinro, StringFormat='Postinumero: {0}'}"/>
+                                        <Label Text="{Binding HenkiloMaara, StringFormat='Henkilömäärä: {0}'}" />
+                                    </VerticalStackLayout>
+                                </Frame>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+                </Frame>
+            </Grid>
 
         <!-- Välibuttonit -->
         <VerticalStackLayout Spacing="10" Grid.Column="1" Grid.Row="1" VerticalOptions="Center" HorizontalOptions="Center">
